src/objects/AF_Bonus_Summary__c.object
<CustomObject>
    <description>It Will represent a Unilever Bonus Fee estimate for a particular brand, fiscal year and agency combination.</description>
    <fields>
        <fullName>AF_Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the Agency name / id</description>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bonus Summaries</relationshipLabel>
        <relationshipName>Bonus_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_Bonus_Matrix_Value__c</fullName>
        <description>AgencyFee#GLOBAL#To store Bonus values associated to Bonus Matrix Object</description>
        <label>Bonus Value</label>
        <summarizedField>AF_Bonus_Matrix__c.AF_Value__c</summarizedField>
        <summaryForeignKey>AF_Bonus_Matrix__c.AF_Bonus_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AF_Brand_Agency_Uq_Combination__c</fullName>
        <description>Used for the looking up the base fee estimate</description>
        <formula>AF_Brand__c +&apos;::&apos;+ AF_Agency__c +&apos;::&apos;+ AF_Fiscal_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Agency Uq Combination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Stores the brand id/name</description>
        <label>Brand</label>
        <referenceTo>AF_Category_Brand__c</referenceTo>
        <relationshipLabel>Bonus Summaries</relationshipLabel>
        <relationshipName>Bonus_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AF_Category_View__c</fullName>
        <formula>CONTAINS($User.AF_Categories__c,  AF_Category__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_Category__c</fullName>
        <formula>AF_Brand__r.AF_Category_Brands__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Fiscal_Year_Difference__c</fullName>
        <description>Stores difference between fical year and today&apos;s year</description>
        <formula>year(TODAY()) -value(AF_Fiscal_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Year Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AF_Fiscal_Year__c</fullName>
        <description>Stores fiscal year</description>
        <label>Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AF_Is_Pilot_Model__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Stores whether brand estimate is pilot model or not</description>
        <label>Is Pilot Model?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AF_No_Of_CrossBorders__c</fullName>
        <description>Gives the count of cross borders in bonus matrix</description>
        <label>No Of CrossBorders</label>
        <summarizedField>AF_Bonus_Matrix__c.AF_CrossBorder_No__c</summarizedField>
        <summaryForeignKey>AF_Bonus_Matrix__c.AF_Bonus_Summary__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>AF_Status__c</fullName>
        <description>Tracks status of the Bonus Summary. Used in approval Process</description>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>W/Cat Finance</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ready For PO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agency_Name__c</fullName>
        <formula>AF_Agency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Agency Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Summary__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bonus Summary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <formula>AF_Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Matrix_Cells__c</fullName>
        <label>No of Matrix Cells</label>
        <summaryForeignKey>AF_Bonus_Matrix__c.AF_Bonus_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VisbleToAgency__c</fullName>
        <formula>if( year($Setup.BonusReportVisibletoAgency__c.AccessDate__c)-value(AF_Fiscal_Year__c) &gt;0 &amp;&amp;  TODAY() &gt;=$Setup.BonusReportVisibletoAgency__c.AccessDate__c,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VisbleToAgency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>key__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>key</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Bonus Summary</label>
    <nameField>
        <label>Bonus Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bonus Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>